adding image zoom

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,12 +6,15 @@
     "start": "next start"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.0",
-    "@emotion/styled": "^11.10.0",
+    "@emotion/react": "^11.10.5",
+    "@emotion/sheet": "^1.2.1",
+    "@emotion/styled": "^11.10.5",
     "@heroicons/react": "^1.0.6",
     "@mui/base": "^5.0.0-alpha.98",
     "@mui/icons-material": "^5.10.14",
+    "@mui/joy": "^5.0.0-alpha.55",
     "@mui/material": "^5.10.2",
+    "@types/react-copy-to-clipboard": "^5.0.4",
     "apollo-server": "^3.10.3",
     "axios": "^0.27.2",
     "buffer": "^6.0.3",
@@ -21,6 +24,7 @@
     "next": "latest",
     "next-auth": "^4.12.2",
     "react": "18.1.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.1.0",
     "react-hook-form": "^7.34.2",
     "react-hot-toast": "^2.4.0",
