--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "@types/react-dom": "18.0.5",
     "@types/react-timeago": "^4.1.3",
     "autoprefixer": "^10.4.7",
+    "eslint": "^8.29.0",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.2",
     "typescript": "4.7.2"
