--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "react": "18.1.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.1.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.34.2",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.6.0",
