add register info

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,11 +14,13 @@
     "@mui/icons-material": "^5.10.14",
     "@mui/joy": "^5.0.0-alpha.55",
     "@mui/material": "^5.10.2",
+    "@mui/x-date-pickers": "^5.0.17",
     "@types/react-copy-to-clipboard": "^5.0.4",
     "apollo-server": "^3.10.3",
     "axios": "^0.27.2",
     "buffer": "^6.0.3",
     "cookies-next": "^2.1.1",
+    "dayjs": "^1.11.7",
     "formik": "^2.2.9",
     "jose": "^4.11.0",
     "next": "latest",
