--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,7 @@
   "dependencies": {
     "@sendgrid/mail": "^7.7.0",
     "axios": "^1.1.3",
-    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
     "cloudinary": "^1.32.0",
     "cookie-parser": "^1.4.6",
@@ -28,6 +28,7 @@
   "description": "",
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
