--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,7 @@
     "ts-node-dev": "^2.0.0"
   },
   "scripts": {
-    "dev": "ts-node-dev app.ts"
+    "dev": "ts-node-dev index.ts"
   },
   "name": "backend",
   "version": "1.0.0",
