--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "express-validator": "^6.14.2",
     "jose": "^4.11.0",
     "jsonwebtoken": "^8.5.1",
